@@ -1,5 +1,10 @@
 2002-03-01  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
+	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-threshold):
+	Change its customize spec.
+	(shimbun-slashdot-jp-sid-url): Follow the above change.
+	(shimbun-headers): Ditto.
+
 	* shimbun/sb-slashdot-jp.el (shimbun-make-contents): Follow the
 	argument spec change of `shimbun-slashdot-jp-make-story-article'.
 	(shimbun-slashdot-jp-make-story-article): Not accept the 2nd
